started CPP07 and fixed makefile in 07ex02

--- a/CPP_07/ex00/Makefile
+++ b/CPP_07/ex00/Makefile
@@ -19,11 +19,10 @@ OBJ_DIR = obj
 SRC_DIR = src
 
 # EXECUTABLE NAME
-NAME = identify
+NAME = whatever
 
 # SOURCE FILES
 SRCS =	main.cpp \
-			Functions.cpp \
 
 # OBJECT FILES
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
