--- a/CPP_08/ex01/Makefile
+++ b/CPP_08/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: bschmidt <bschmidt@student.42.de>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/20 17:42:20 by bendixschmi       #+#    #+#              #
-#    Updated: 2025/02/26 14:15:50 by bschmidt         ###   ########.fr        #
+#    Updated: 2025/02/28 16:01:28 by bschmidt         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,10 +19,11 @@ OBJ_DIR = obj
 SRC_DIR = src
 
 # EXECUTABLE NAME
-NAME = whatever
+NAME = Span
 
 # SOURCE FILES
 SRCS =	main.cpp \
+			Span.cpp \
 
 # OBJECT FILES
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
