--- a/CPP_08/ex02/Makefile
+++ b/CPP_08/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: bschmidt <bschmidt@student.42.de>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/20 17:42:20 by bendixschmi       #+#    #+#              #
-#    Updated: 2025/02/26 14:15:50 by bschmidt         ###   ########.fr        #
+#    Updated: 2025/03/02 15:10:17 by bschmidt         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ OBJ_DIR = obj
 SRC_DIR = src
 
 # EXECUTABLE NAME
-NAME = whatever
+NAME = mutated
 
 # SOURCE FILES
 SRCS =	main.cpp \
