--- a/CPP_09/ex01/Makefile
+++ b/CPP_09/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: bschmidt <bschmidt@student.42.de>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/20 17:42:20 by bendixschmi       #+#    #+#              #
-#    Updated: 2025/03/02 15:10:17 by bschmidt         ###   ########.fr        #
+#    Updated: 2025/04/08 18:21:03 by bschmidt         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,11 +19,11 @@ OBJ_DIR = obj
 SRC_DIR = src
 
 # EXECUTABLE NAME
-NAME = mutated
+NAME = RPN
 
 # SOURCE FILES
 SRCS =	main.cpp \
-
+			RPN.cpp \
 # OBJECT FILES
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
